Fixed button dark mode issue

--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -200,7 +200,9 @@
 [data-theme="dark"] {
   .button {
     &.contained {
-      background-color: var(--bg-color-light);
+      &.primary {
+        background-color: var(--bg-color-light);
+      }
     }
   }
 }
